fixed the navbar UI on mobile screen

--- a/src/components/Navbar/navbar.styles.scss
+++ b/src/components/Navbar/navbar.styles.scss
@@ -27,3 +27,18 @@
     }
   }
 }
+
+.form-inline {
+  @media screen and (max-width: 768px) {
+    width: 100%;
+
+  input {
+    width: 75%;
+  }
+
+  button {
+    margin-left: .5rem;
+  }
+
+  }
+}
